# fast-secrets

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  diffing.py  generators.py  main.py  pyproject.toml  registry.py  requirements-dev.txt  requirements.txt  test_main.http
src/backend/fast_secrets/: __init__.py  api_models.py  cli.py  generators.py  main.py  registry.py  tool_features.py  wordlist.py
src/frontend/: api-docs.css  api-docs.html  api-docs.js  app.js  index.html  jsonpath-engine.js  jsonpath-worker.js  local-diff.js  local-tools.js  manifest.webmanifest  qr-render.js  qrcodegen.js  regex-worker.js  style.css  sw.js  theme.js  words.js
static/: app.js  index.html  style.css
tests/: browser_auth_contract.mjs  browser_contract.mjs  conftest.py  test_api_v2.py  test_browser_auth_contract.py  test_browser_e2e.py  test_browser_modules.py  test_browser_playwright.py  test_cli.py  test_diffing.py  test_feature_edges.py  test_generators.py  test_registry_edges.py  test_regressions.py  test_tool_features.py
