[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-secrets"
version = "2.0.0"
description = "Privacy-first secret generation and developer API utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.138.0",
  "uvicorn[standard]==0.49.0",
  "regex==2026.6.28",
  "python-jsonpath==2.2.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "playwright==1.60.0",
  "pytest==9.1.1",
  "pytest-cov==7.0.0",
  "setuptools==78.1.1",
]

[project.scripts]
fast-secrets = "fast_secrets.cli:main"

[tool.setuptools]
package-dir = {"" = "src/backend"}

[tool.setuptools.packages.find]
where = ["src/backend"]
include = ["fast_secrets*"]

[tool.setuptools.data-files]
"share/fast-secrets/static" = [
  "src/frontend/*.css",
  "src/frontend/*.html",
  "src/frontend/*.js",
  "src/frontend/*.png",
  "src/frontend/*.svg",
  "src/frontend/*.webmanifest",
]
"share/fast-secrets/static/vendor/jsonpath-rfc9535" = [
  "src/frontend/vendor/jsonpath-rfc9535/*.js",
  "src/frontend/vendor/jsonpath-rfc9535/LICENSE",
]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/core" = ["src/frontend/vendor/jsonpath-rfc9535/core/*.js"]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/core/evaluators" = ["src/frontend/vendor/jsonpath-rfc9535/core/evaluators/*.js"]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/core/functions" = ["src/frontend/vendor/jsonpath-rfc9535/core/functions/*.js"]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/core/functions/utils" = ["src/frontend/vendor/jsonpath-rfc9535/core/functions/utils/*.js"]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/core/visitors" = ["src/frontend/vendor/jsonpath-rfc9535/core/visitors/*.js"]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/parser" = ["src/frontend/vendor/jsonpath-rfc9535/parser/*.js"]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/utils" = ["src/frontend/vendor/jsonpath-rfc9535/utils/*.js"]
"share/fast-secrets/static/vendor/jsonpath-rfc9535/utils/comparers" = ["src/frontend/vendor/jsonpath-rfc9535/utils/comparers/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src/backend"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
markers = [
  "browser: tests that require an installed browser runtime",
]

[tool.coverage.run]
branch = true
source = ["fast_secrets"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
